--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
-    "mongodb": "^6.15.0"
+    "form-data": "^4.0.2",
+    "jsonwebtoken": "^9.0.2",
+    "mailgun.js": "^12.0.1",
+    "mongodb": "^6.15.0",
+    "stripe": "^18.0.0"
   }
 }
